force-app/main/default/objects/KimbleOne__RateCardCombinationDefinition__c/KimbleOne__RateCardCombinationDefinition__c.object-meta.xml
<CustomObject>
    <label>Rate Card Combination Definition</label>
    <nameField>
        <label>Rate Card Combination Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Card Combination Definitions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>