force-app/main/default/objects/KimbleOne__RateCardCombinationDefinition__c/fields/KimbleOne__Delimiter__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Delimiter__c</fullName>
    <label>Delimiter</label>
    <length>5</length>
    <type>Text</type>
</CustomField>