force-app/main/default/objects/KimbleOne__RateCardCombinationDefinition__c/fields/KimbleOne__IsFactored__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsFactored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Factored</label>
    <type>Checkbox</type>
</CustomField>