force-app/main/default/objects/KimbleOne__RateCardCombinationDefinition__c/fields/KimbleOne__KeyDefinition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__KeyDefinition__c</fullName>
    <label>Key Definition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>