force-app/main/default/objects/KimbleOne__RateCardCombinationDefinition__c/fields/KimbleOne__KeyFactorField__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__KeyFactorField__c</fullName>
    <label>Key Factor Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>