force-app/main/default/objects/KimbleOne__RateCardCombinationDefinition__c/fields/KimbleOne__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ObjectType__c</fullName>
    <label>Object Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>