force-app/main/default/objects/KimbleOne__RateCardCombinationDefinition__c/fields/KimbleOne__UnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UnitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Rate Card Combination Definitions</relationshipLabel>
    <relationshipName>RateCardCombinationDefinitions</relationshipName>
    <type>Lookup</type>
</CustomField>