force-app/main/default/objects/KimbleOne__RateCardCombinationDefinition__c/fields/KimbleOne__UnitTypeField__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UnitTypeField__c</fullName>
    <label>Unit Type Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>